# pantry

./: .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh  test.http
integration/: integration.py  requirements.txt
migrations/2024-06-16-161021_create_items/: up.sql
src/: actions.rs  main.rs  models.rs
static/: generator.html  index.html
static/assets/css/: main.css  styles.css
static/assets/js/: common.js  list.js  pantry.js  qrscanner.js  writer.js
static/list/: index.html
static/writer/: index.html
