[package]
name = "pantry"
version = "1.0.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.1", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono"] }
libsqlite3-sys = { version = "0.28.0", features = ["bundled"]}
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
actix-web = "4.6.0"
actix-files = "0.6.5"
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
env_logger = "0.11.3"
dotenvy = "0.15.7"
diesel_migrations = "2.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
utoipa = { version="5.0.0-alpha.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version= "7.1.1-alpha.0", features = ["actix-web"] }