[package]
name = "pantry"
version = "1.0.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.6", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35", "chrono"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tracing = "0.1.41"
actix-web = "4.9.0"
actix-files = "0.6.6"
env_logger = "0.11.6"
dotenvy = "0.15.7"
diesel_migrations = "2.2.0"
chrono = { version = "0.4.39", features = ["serde"] }
utoipa = { version="5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version= "8.1.1", features = ["actix-web"] }